# src/models/openapi.ts
@@ -1,11 +1,14 @@
 import { _Error as Error } from '../__generated__/linkedup-web-api-client';
-import { UserCreation } from '../__generated__/linkedup-web-api-client';
+import { UserCreation, SimpleUser } from '../__generated__/linkedup-web-api-client';
 import { User } from '../__generated__/linkedup-web-api-client';
-import { SimpleUser } from '../__generated__/linkedup-web-api-client';
+import {
+  Activity,
+  ActivityCategory,
+  ActivityStatus,
+  AchievementSubmissionRole,
+} from '../__generated__/linkedup-web-api-client';
 
-// import { Language } from '../__generated__/linkedup-web-api-client';
 import { Language, UserRole, UserStatus } from '../__generated__/linkedup-web-api-client';
-// import { UserStatus } from '../__generated__/linkedup-web-api-client';
 
 import { Student } from '../__generated__/linkedup-web-api-client';
 import { Shop } from '../__generated__/linkedup-web-api-client';
@@ -42,11 +45,36 @@ export enum ApprovalCommentType {
   APPROVAL = 'Approval',
 }
 
+export enum SubmissionRoleEnum {
+  Teacher = 'Teacher',
+  Student = 'Student',
+  Both = 'Both'
+}
+
+export enum ActivityStatusEnum {
+  Open = 'Open',
+  Closed = 'Closed',
+  Cancelled = 'Cancelled',
+  Scheduled = 'Scheduled',
+}
+
 export const roleToEnum = (role: UserRole): UserRoleEnum => UserRoleEnum[role];
 export const statusToEnum = (status: UserStatus): UserStatusEnum => UserStatusEnum[status];
 export const approvalStatusToEnum = (status: ApprovalStatusEnum): ApprovalStatusEnum =>
   ApprovalStatusEnum[status];
 export const languageToEnum = (language: Language): LanguageEnum => LanguageEnum[language];
+export const activityStatusToEnum = (activityStatus: ActivityStatus): ActivityStatusEnum => ActivityStatusEnum[activityStatus];
 
 // export type { Language, UserRole, UserStatus };
-export type { Error, User, SimpleUser, UserCreation, Student, Shop };
+export type {
+  Error,
+  User,
+  SimpleUser,
+  UserCreation,
+  Student,
+  Shop,
+  Activity,
+  ActivityCategory,
+  ActivityStatus,
+  AchievementSubmissionRole,
+};
